completado diseño de login

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+:root {
+  font-size: 13px;
+  /* background: linear-gradient(to bottom, rgb(49, 48, 77), rgb(182, 187, 196)); */
+}
 @import "primeng/resources/themes/lara-light-blue/theme.css";
 @import "primeng/resources/primeng.css";
 @import "primeicons/primeicons.css";
